Css Added Colors and classes

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
 <body>
   <!-- Add your site or application content here -->
-  <p>Hello world! Lets' do CSS things!</p>
-  <div>
-    <h1>Hey!</h1>
-    <h2>subheading</h2>
+  <p>Hello world! Im on my CSS Shit!</p>
+  <div class="mmm_cake">
+    <h1 class="First_Headline">Hey!</h1>
+    <h2 class="Sub_Head">"Im Homer Simpson"</h2>
     <img src="img/homer-simpson.jpg" alt="Homer Simpson celebrating">
-  </div>
+  </div class="mmm_cake">
 
-  <h2>Unordered list:</h2>
+  <h2 class="Sub_Head">Unordered list:</h2>
     <ul>
       <li>Coffee</li>
       <li>Tea
@@ -45,7 +45,7 @@
 
     <hr/>
 
-    <h2>Ordered list:</h2>
+    <h2 class="Sub_Head">Ordered list:</h2>
     <ol>
       <li>Item 1</li>
       <li>Item 2</li>
