--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>My Fire Ass Project That Might Be an A</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,38 +20,24 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=League+Gothic&family=Montserrat+Subrayada:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <!-- Add your site or application content here -->
-  <p>Hello world! Im on my CSS Shit!</p>
-  <div class="mmm_cake">
-    <h1 class="First_Headline">Hey!</h1>
-    <h2 class="Sub_Head">"Im Homer Simpson"</h2>
-    <img src="img/homer-simpson.jpg" alt="Homer Simpson celebrating">
-  </div class="mmm_cake">
+  <div>You wanna find somebody you trust and lay low
+    </div>
+      <div>But it seems they all on the same mission
+      </div>
 
-  <h2 class="Sub_Head">Unordered list:</h2>
-    <ul>
-      <li>Coffee</li>
-      <li>Tea
-        <ul>
-          <li>Black tea</li>
-          <li>Green tea</li>
-        </ul>
-      </li>
-      <li>Milk</li>
-    </ul>
-
-    <hr/>
-
-    <h2 class="Sub_Head">Ordered list:</h2>
-    <ol>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-    </ol>
-
+  <div>You wanna find somebody you trust and lay low
+    </div>
+      <div>But cant stand the heat of my love, then stay out the kitchen
+      </div>
+        <h2 class="Montserrat"></h2>
 </body>
+
+    <img class= "cloud_background" src="img/holo_clouds.jpg" alt="cloud_background">
 
 </html>
