--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 
 <body>
+  <div class="holo_clouds" src="holo_clouds.jpg" alt="cloud_bg">
   <div>You wanna find somebody you trust and lay low
     </div>
       <div>But it seems they all on the same mission
@@ -36,8 +37,9 @@
       <div>But cant stand the heat of my love, then stay out the kitchen
       </div>
         <h2 class="Montserrat"></h2>
-</body>
+        </div>
+  </div>
+  </body>
 
-    <img class= "cloud_background" src="img/holo_clouds.jpg" alt="cloud_background">
 
 </html>
