added moon and tried blend mode but dont know wtf happend

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=League+Gothic&family=Montserrat+Subrayada:wght@700&display=swap" rel="stylesheet">
 </head>
-
-<body>
+  <body>
+    <div class="container">
+  <div class="vamp">
   <div class="holo_clouds" src="holo_clouds.jpg" alt="cloud_bg">
+    <div>KID CUDI<div> 
+    <div class="moon"></div>
   <div>You wanna find somebody you trust and lay low
     </div>
       <div>But it seems they all on the same mission
@@ -36,9 +39,11 @@
     </div>
       <div>But cant stand the heat of my love, then stay out the kitchen
       </div>
-        <h2 class="Montserrat"></h2>
+        <h2 class="montserrat"></h2>
         </div>
   </div>
+</div>
+    </div>
   </body>
 
 
