--- a/index.html
+++ b/index.html
@@ -1,50 +1,40 @@
 <!doctype html>
 <html class="no-js" lang="">
-
-<head>
-  <meta charset="utf-8">
-  <title>My Fire Ass Project That Might Be an A</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-
-  <meta name="theme-color" content="#fafafa">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=League+Gothic&family=Montserrat+Subrayada:wght@700&display=swap" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>My Fire Ass Project That Might Be an A</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+    <meta name="theme-color" content="#fafafa">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=League+Gothic&family=Montserrat+Subrayada:wght@700&display=swap" rel="stylesheet">
+  </head>
   <body>
-    <div class="container">
-  <div class="vamp">
-  <div class="holo_clouds" src="holo_clouds.jpg" alt="cloud_bg">
-    <div>KID CUDI<div> 
-    <div class="moon"></div>
-  <div>You wanna find somebody you trust and lay low
-    </div>
-      <div>But it seems they all on the same mission
-      </div>
-
-  <div>You wanna find somebody you trust and lay low
-    </div>
-      <div>But cant stand the heat of my love, then stay out the kitchen
-      </div>
-        <h2 class="montserrat"></h2>
+    <div class="bg-blend">
+    <div class="vamp">
+    <div class="holo_clouds" src="holo_clouds.jpg" alt="cloud_bg">
+    <div>
+      KID CUDI
+      <div>
+        <div class="moon"></div>
+        <div>You wanna find somebody you trust and lay low</div>
+        <div>But it seems they all on the same mission</div>
+        <div>You wanna find somebody you trust and lay low</div>
+        <div>But cant stand the heat of my love, then stay out the kitchen</div>
+        <div>
+          <h2 class="montserrat"></h2>
         </div>
-  </div>
-</div>
+      </div>
     </div>
   </body>
-
-
 </html>
